# fastapi-marvel

./: .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 288cd25ffa4a_init.py  306a383e4394_init.py  cb9ecff1bb51_init.py  ce9de746e741_init.py  dc3746d086c8_init.py  df4050fef6b1_init.py
src/: main.py
src/api/handlers/: character.py  comic.py  comics.py  test.py
src/api/services/: marvel.py
src/core/: config.py
src/db/: base.py  base_class.py  session.py
src/env/: environment.py
src/env/local/: public.py
src/handlers/: test.py
src/models/: character.py  comic.py  relationship.py  thumbnail.py
src/static/: index.html
src/static/css/: styles.css
src/static/js/: index.js
